commit 4: aqui dimos algunos acabados en css,

--- a/index.html
+++ b/index.html
@@ -165,7 +165,11 @@
      </pre>
     </section>
              </section>
-
+             <section class="gatito_1">
+              <h3 id="despedida_final">MUCHAS GRACIAS POR QUEDARSE HASTA AQUI🍷</h3>
+              <img src="imagi/gatito.png" alt="imagen-gatito" class="imagen_despedida">
+             </section>
+ 
   </main>
 
   <footer class="footer">
